# Xcodec

./: CMakeLists.txt
examples/: CMakeLists.txt  example-alaw-dec.c  example-alaw-enc.c
include/: xcodec.h
include/xcodec/: xcodec-alaw-module.h
src/alaw/: xcodec-alaw-decoder.c  xcodec-alaw-decoder.h  xcodec-alaw-encoder.c  xcodec-alaw-encoder.h  xcodec-alaw-module.c
src/modules/alaw/: xcodec-alaw-encoder.c  xcodec-alaw-encoder.h  xcodec-alaw-module.c
